[package]
name = "bevy3d_template"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13", features = ["dynamic_linking"] }
bevy_rapier3d = { version = "0.26", features = ["parallel", "simd-stable"]}
tracing = "0.1"
rand = "0.8"
bevy-inspector-egui = "0.24.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1